...
        guard totalChallenges > 0 else { return 0 }
        return Double(completedChallenges) / Double(totalChallenges)
    }

    var categoryIcon: String {
        switch WeaponCategoryName {
        case "Assault Rifles": return "scope"
        case "SMGs":           return "bolt.fill"
        case "LMGs":           return "flame.fill"
        case "Shotguns":       return "burst.fill"
        case "Sniper Rifles":  return "target"
        case "Pistols":        return "smallcircle.filled.circle"
        case "Launchers":      return "tornado"
        case "Specials":       return "scissors"
...
